[gd_scene load_steps=17 format=3 uid="uid://c0m5w6ioqao5n"]

[ext_resource type="Script" path="res://instances/player.gd" id="1_qknks"]
[ext_resource type="Texture2D" uid="uid://wjcbulpmmem3" path="res://assets/light.png" id="2_dkine"]
[ext_resource type="PackedScene" uid="uid://bouw15ycjgmjm" path="res://instances/cam.tscn" id="4_oku4y"]
[ext_resource type="Theme" uid="uid://va63pfgplq4a" path="res://tooltip.tres" id="5_37sqq"]
[ext_resource type="Texture2D" uid="uid://cybeat1xwjjtj" path="res://assets/tilemap.png" id="6_7qqch"]
[ext_resource type="AudioStream" uid="uid://btik02exm3bx1" path="res://assets/sfx/sfx - gravel_thump.ogg" id="6_h03kp"]
[ext_resource type="AudioStream" uid="uid://1pamxwdjfffj" path="res://assets/sfx/sfx - waterbloop.ogg" id="7_jiv50"]
[ext_resource type="AudioStream" uid="uid://cqonhwcdjnoof" path="res://assets/sfx/sfx - scream agony.wav" id="8_4y8nw"]
[ext_resource type="AudioStream" uid="uid://dbrwsgwbaoda4" path="res://assets/sfx/sfx - eating-a-carrot.ogg" id="9_iygjr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3nik"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_ho26u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.0625, 0.9375)]
}

[sub_resource type="Animation" id="Animation_2h2dk"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.04657, -0.25, 0, 0.25, 0, 0.999602, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.949024, -0.25, 0, 0.25, 0, 0.999602, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s0pb8"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.5, -1), Vector2(0, 0), Vector2(1, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0698132, 0.0, 0.0698132]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.0625, 0.9375), Vector2(1, 1), Vector2(1.0625, 0.9375)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n562m"]
_data = {
"RESET": SubResource("Animation_ho26u"),
"idle": SubResource("Animation_2h2dk"),
"walk": SubResource("Animation_s0pb8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_l8524"]
radius = 14.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2urvo"]
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 80.0
initial_velocity_max = 160.0
gravity = Vector3(0, 98, 0)
damping_min = 2.804
damping_max = 2.804
color = Color(0.909804, 0.270588, 0.215686, 1)

[node name="player" type="CharacterBody2D"]
texture_filter = 5
collision_layer = 2
collision_mask = 15
motion_mode = 1
script = ExtResource("1_qknks")

[node name="torch" type="PointLight2D" parent="."]
visible = false
light_mask = 3
visibility_layer = 3
shadow_enabled = true
texture = ExtResource("2_dkine")

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u3nik")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.564706)
scale = Vector2(0.0625, 0.0375)
texture = ExtResource("2_dkine")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(-0.5, -1)
scale = Vector2(1.0625, 0.9375)
texture = ExtResource("6_7qqch")
offset = Vector2(0, -7)
region_enabled = true
region_rect = Rect2(68, 153, 16, 16)

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite")
libraries = {
"": SubResource("AnimationLibrary_n562m")
}
autoplay = "idle"
speed_scale = 5.0

[node name="cam" parent="." instance=ExtResource("4_oku4y")]

[node name="pick_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="coll" type="CollisionShape2D" parent="pick_area"]
shape = SubResource("CircleShape2D_l8524")

[node name="ui_popups" type="VBoxContainer" parent="."]
offset_left = -31.0
offset_top = -120.0
offset_right = 31.0
offset_bottom = -17.0
theme_override_constants/separation = 0
alignment = 2

[node name="tooltip_can_pick" type="Label" parent="ui_popups"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.627451)
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("5_37sqq")
text = "space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fx" type="VBoxContainer" parent="ui_popups"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="hold_pos" type="Control" parent="ui_popups"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 4

[node name="hold_sprite" type="Sprite2D" parent="ui_popups/hold_pos"]
unique_name_in_owner = true
position = Vector2(0, 5)
texture = ExtResource("6_7qqch")
region_enabled = true
region_rect = Rect2(102, 187, 16, 16)

[node name="sfx" type="Node" parent="."]

[node name="sfx_thud" type="AudioStreamPlayer2D" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("6_h03kp")
volume_db = -3.354
bus = &"sfx"

[node name="sfx_bloop" type="AudioStreamPlayer2D" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("7_jiv50")
bus = &"sfx"

[node name="sfx_scream" type="AudioStreamPlayer2D" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("8_4y8nw")
bus = &"sfx"

[node name="sfx_crunch" type="AudioStreamPlayer2D" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("9_iygjr")
bus = &"sfx"

[node name="part_blood" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_2urvo")
lifetime = 0.8
one_shot = true
explosiveness = 0.7

[connection signal="body_entered" from="pick_area" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="pick_area" to="." method="_on_pick_area_body_exited"]
